--- a/.config/i3/config
+++ b/.config/i3/config
@@ -515,8 +515,8 @@ for_window [class="Terminator"] focus
 #####################################################################################################################
 
 
-bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -D pulse sset Master '5%+'"
-bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -D pulse sset Master '5%-'"
+bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -D pulse sset Master '5%+' && pkill -RTMIN+10 i3blocks"
+bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -D pulse sset Master '5%-' && pkill -RTMIN+10 i3blocks"
 bindsym XF86AudioMute exec --no-startup-id "amixer -D pulse set Master toggle"
 #https://github.com/acrisci/playerctl/
 bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
@@ -686,7 +686,7 @@ bar {
     # Second one is the standard statusbar with my personal settings
 
 	#status_command i3status
-	status_command i3status -c ~/.config/i3/i3status.conf
+	#status_command i3status -c ~/.config/i3/i3status.conf
 
 
 
@@ -697,7 +697,7 @@ bar {
     # put hastag in front if not installed
 
 #status_command i3blocks
-#status_command i3blocks -c ~/.config/i3/i3blocks.conf
+status_command i3blocks -c ~/.config/i3/i3blocks.conf
 #status_command i3blocks -c ~/.config/i3/i3blocks-original.conf
 #status_command i3blocks -c ~/.config/i3/i3blocks-awesome.conf
 
