Update config, mount.sh, and 4 more files...

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -63,6 +63,7 @@ set $right semicolon
 #exec --no-startup-id xrandr --output DVI-D-1 --right-of DVI-I-1 --auto
 exec --no-startup-id xrandr --output HDMI2 --right-of HDMI1 --auto
 
+#set $monL eDP-1-1
 set $monL DP-1-1-1
 set $monR DP-1-1-8
 
@@ -91,9 +92,9 @@ workspace_auto_back_and_forth no
 #bindsym $mod+Tab focus output left
 
 # switch two workspaces at once (the need to be on different outputs)
-bindsym $mod+1 workspace $ws1L, workspace $ws1R
-bindsym $mod+2 workspace $ws2L, workspace $ws2R
-bindsym $mod+3 workspace $ws3L, workspace $ws3R
+bindsym $mod+1 workspace $ws1R, workspace $ws1L
+bindsym $mod+2 workspace $ws2R, workspace $ws2L
+bindsym $mod+3 workspace $ws3R, workspace $ws3L
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1; workspace 1
@@ -330,10 +331,10 @@ font pango:Noto Mono Regular 10
 # you can find the class with the program xprop
 
 # Workspace 1 browser related
-assign [class="Chromium|Google-chrome"]                                             → 1
-assign [class="GitAhead"]                                                           → 12
+assign [class="Chromium|Google-chrome"]                                             → 11
+assign [class="GitAhead"]                                                           → 2
 assign [class="Microsoft Teams - Preview"]                                          → 13
-
+assign [class="Spotify"]                                                            → 3
 
 
 #####################################################################################################################
@@ -407,7 +408,8 @@ bindsym --release $mod+m exec /home/danne/bin/mount.sh
 #####################################################################################################################
 
 
-bindsym Print exec --no-startup-id scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f$$(xdg-user-dir PICTURES'
+# bindsym Print exec --no-startup-id scrot '%Y-%m-%d-%s_screenshot_$wx$h.jpg' -e 'mv $f$$(xdg-user-dir PICTURES'
+bindsym --release Print exec --no-startup-id scrot -s
 bindsym Control+Print exec --no-startup-id xfce4-screenshooter
 bindsym Control+Shift+Print exec --no-startup-id gnome-screenshot -i
 #bindsym shift+Print exec --no-startup-id shutter
@@ -448,6 +450,7 @@ for_window [class="Xfburn"] floating disable
 for_window [class="Xfce4-appfinder"] floating enable
 for_window [class="Xfce4-settings-manager"] floating disable
 for_window [class="Xfce4-taskmanager"] floating enable
+for_window [class="Gsimplecal"] floating enable
 
 
 #for_window [instance="gimp"] floating disable
@@ -519,14 +522,14 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -D pulse sset Master '
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -D pulse sset Master '5%-' && pkill -RTMIN+10 i3blocks"
 bindsym XF86AudioMute exec --no-startup-id "amixer -D pulse set Master toggle"
 #https://github.com/acrisci/playerctl/
-bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
-bindsym XF86AudioNext exec --no-startup-id playerctl next
-bindsym XF86AudioPrev exec --no-startup-id playerctl previous
-bindsym XF86AudioStop exec --no-startup-id playerctl stop
-#bindsym XF86AudioPlay exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"
-#bindsym XF86AudioNext exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
-#bindsym XF86AudioPrev exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"
-#bindsym XF86AudioStop exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Stop"
+# bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+# bindsym XF86AudioNext exec --no-startup-id playerctl next
+# bindsym XF86AudioPrev exec --no-startup-id playerctl previous
+# bindsym XF86AudioStop exec --no-startup-id playerctl stop
+bindsym XF86AudioPlay exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause"
+bindsym XF86AudioNext exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
+bindsym XF86AudioPrev exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous"
+bindsym XF86AudioStop exec --no-startup-id "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Stop"
 
 
 #####################################################################################################################
